--- a/TrainingSystem-main/TrainingSystemTraineeWEB/Pages/Trainee/Course.cshtml
+++ b/TrainingSystem-main/TrainingSystemTraineeWEB/Pages/Trainee/Course.cshtml
@@ -9,7 +9,8 @@
 <div class="row" style="margin-top: 20px; margin-bottom: 20px;">
     <div class="col-3" style="position: absolute; right: 0;">
         <div class="input-group">
-            <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon"  onkeyup="sendData(this)"/>
+            <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
+                aria-describedby="search-addon" onkeyup="sendData(this)" />
         </div>
     </div>
 </div>
@@ -23,7 +24,7 @@
                 <th scope="col">Thời lượng</th>
                 <th scope="col">Mục tiêu</th>
                 <th scope="col">Hình thức</th>
-                <th scope="col"></th>
+                <th scope="col" colspan="2"></th>
             </tr>
         </thead>
         <tbody id="course-list">
@@ -38,13 +39,18 @@
                         @course.NumberOfLesson
                     </td>
                     <td width="200" style="padding-right: 50px; text-overflow: ellipsis;">
-                        <textarea disabled  style="border: none"> @course.Target </textarea>
+                        <textarea disabled style="border: none"> @course.Target </textarea>
                     </td>
                     <td width="100" style="padding-right: 50px;">
                         @course.AssessmentForm
                     </td>
                     <td width="100" style="padding-right: 50px;">
-                        <a class="main-btn primary-btn btn-hover btn-sm" href="/trainee/course-detail/@course.CourseID">Chi tiết</a>
+                        <a class="main-btn primary-btn btn-hover btn-sm" href="/trainee/course-detail/@course.CourseID">Chi
+                            tiết</a>
+                    </td>
+                    <td width="100" style="padding-right: 50px;">
+                        <a onclick="join(@course.CourseID)" class="main-btn success-btn btn-hover btn-sm" href="#">Tham
+                            gia</a>
                     </td>
                 </tr>
             }
@@ -53,6 +59,56 @@
 </div>
 
 <script>
+
+    function decodeJWT(token) {
+        // Split the token into three parts (header, payload, signature)
+        const parts = token.split('.');
+        if (parts.length !== 3) {
+            throw new Error('Invalid JWT');
+        }
+
+        // Decode the base64-encoded header and payload
+        const header = JSON.parse(atob(parts[0]));
+        const payload = JSON.parse(atob(parts[1]));
+
+        return {
+            header,
+            payload
+        };
+    }
+
+    async function join(courseId) {
+        const payload = decodeJWT(localStorage.getItem('token'))?.payload;
+        if (!payload.unique_name) {
+            window.alert('please login!');
+            return;
+        }
+
+        const apiUrl = 'https://localhost:5001';
+        const response = await fetch(apiUrl + '/api/course/join', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({
+                courseKey: courseId,
+                traineeKey: 0,
+                accountId: payload.unique_name
+            })
+        });
+
+        if (response.ok) {
+            const data = await response.json();
+            localStorage.setItem('token', data.token);
+            event.target.style.display = 'none';
+
+        } else {
+            window.alert('join error');
+        }
+    }
+
+
+
     function sendData(e) {
         const $searchResult = $('#course-list');
         let match = e.value.match(/^[a-zA-Z0-9]*/);
@@ -60,7 +116,7 @@
 
         if (match2[0] === e.value) {
             $searchResult.html('');
-            fetch('https://localhost:44321/api/course').then(r => r.json()).then(data => {
+            fetch('https://localhost:5001/api/course').then(r => r.json()).then(data => {
                 let payload = data;
                 $searchResult.html('');
                 if (payload.length < 1) {
@@ -96,7 +152,7 @@
         }
 
         if (match[0] === e.value) {
-            fetch('https://localhost:44321/api/course/search?searchString=' + e.value).then(r => r.json()).then(data => {
+            fetch('https://localhost:5001/api/course/search?searchString=' + e.value).then(r => r.json()).then(data => {
                 let payload = data;
                 $searchResult.html('');
                 if (payload.length < 1) {
