--- a/TrainingSystem-main/TrainingSystemTraineeWEB/Pages/Register/Register.cshtml
+++ b/TrainingSystem-main/TrainingSystemTraineeWEB/Pages/Register/Register.cshtml
@@ -47,8 +47,8 @@
     .login-form .btn {
       width: 100%;
       height: 38px;
-      background-color: #337ab7;
-      border-color: #2e6da4;
+      background-color: #1abc9c;
+      border-color: #1abc9c;
       color: #fff;
       font-size: 14px;
       cursor: pointer;
@@ -67,6 +67,16 @@
     .login-form .btn:focus {
       outline: none;
     }
+
+    body {
+      background-image: url('https://raw.githubusercontent.com/sefyudem/Responsive-Login-Form/82b8d8efd3b0ac6382b9d0d71a99c6cf9dcefa23/img/bg.svg');
+      background-repeat: no-repeat;
+    }
+
+    a {
+      text-decoration: none;
+      color: gray;
+    }
   </style>
 </head>
 
@@ -74,8 +84,11 @@
   <div class="login-form">
     <h1>Register</h1>
     <form>
-        <div class="form-group">
+      <div class="form-group">
         <input type="email" name="email" class="form-control" placeholder="Email" required>
+      </div>
+      <div class="form-group">
+        <input type="text" name="fullname" class="form-control" placeholder="Full Name" required>
       </div>
       <div class="form-group">
         <input type="text" name="username" class="form-control" placeholder="Username" required>
@@ -97,6 +110,7 @@
     const username = document.querySelector('input[name=username]').value;
     const password = document.querySelector('input[name=password]').value;
     const email = document.querySelector('input[name=email]').value;
+    const fullname = document.querySelector('input[name=fullname]').value;
     const apiUrl = 'https://localhost:5001';
     const response = await fetch(apiUrl + '/api/register', {
       method: 'POST',
@@ -105,6 +119,7 @@
       },
       body: JSON.stringify({
         email,
+        fullname,
         username,
         password
       })
