--- a/TrainingSystem-main/TrainingSystemTraineeWEB/Pages/Shared/_Slidebar-Nav.cshtml
+++ b/TrainingSystem-main/TrainingSystemTraineeWEB/Pages/Shared/_Slidebar-Nav.cshtml
@@ -41,6 +41,9 @@
                     <li>
                         <a asp-page="Course" class="@((ViewBag.PageName == "Course") ? "active" : "")"> Khoá học </a>
                     </li>
+                    <li>
+                        <a asp-page="CourseResult" class="@((ViewBag.PageName == "CourseResult") ? "active" : "")"> Kết quả học tập </a>
+                    </li>
                 </ul>
             </li>
 
