--- a/TrainingSystem-main/TrainingSystemManagerWEB/Pages/Manager/ClassRoom.cshtml
+++ b/TrainingSystem-main/TrainingSystemManagerWEB/Pages/Manager/ClassRoom.cshtml
@@ -48,7 +48,26 @@
                             tiết</a>
                     </td>
                     <td width="100" style="padding-right: 50px;">
-                        <button class="main-btn success-btn btn-hover btn-sm" onclick="sendNotify('@course.ClassroomName')">
+                        <div class="modal fade" id="modal-@course.ClassroomID" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                       <textarea id="content-@course.ClassroomID" class="form-control"> </textarea>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                    <button type="button" class="btn btn-primary" onclick="sendNotify('@course.ClassroomID','@course.ClassroomName')">Send</button>
+                                </div>
+                                </div>
+                            </div>
+                        </div>
+                        <button data-toggle="modal" data-target="#modal-@course.ClassroomID" class="main-btn success-btn btn-hover btn-sm" >
                             Request course
                         </button>
                     </td>
@@ -83,8 +102,9 @@
         };
     }
 
-    async function sendNotify(className) {
-        console.log(className,'className');
+    async function sendNotify(id, className) {
+         
+        const textArea = document.querySelector('#content-' + id);
         const payload = decodeJWT(localStorage.getItem('token'))?.payload;
         if (!payload.unique_name) {
             window.alert('please login!');
@@ -98,7 +118,7 @@
                 'Content-Type': 'application/json'
             },
             body: JSON.stringify({
-                message: "[Manager] Yêu cầu thêm khoá học cho lớp: " + className,
+                message: "[Manager] " + className  + ": "+  textArea.value,
                 reciveId: payload.unique_name
             })
         });
@@ -109,6 +129,9 @@
         } else {
             window.alert('join error');
         }
+
+        console.log($('#modal-'+ id));
+        $('#modal-'+ id + ' .close').click();
     }
 
 
